Round of cleanup and improvements.

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -27,5 +27,6 @@
 @import 'mixins/size';
 @import 'mixins/strip';
 @import 'mixins/work-item';
-
+@import 'mixins/work-heading';
+@import 'mixins/work-text';
 @import 'placeholders/form-control';
