--- a/src/sass/config/_colors.scss
+++ b/src/sass/config/_colors.scss
@@ -1,13 +1,14 @@
 $white:  #ffffff;
 $black:  #131313;
 $gray:   #E8EAED;
-$blue:   #5B5F97;
+$blue:   rgb(73, 2, 255);
 $red:    #eb5a4f;
 $orange: #f8a32c;
 $tan:    #DCAB6B;
 $purple: #a65cd4;
 $dark-purple: #26022B;
 $spotify-green: #65D36E;
-$pink: #FF5F58;
+$pink: rgb(253, 9, 142);
 $yellow: #FEBD2F;
 $green: #26CB40;
+$plum: rgb(40, 1, 46);
