--- a/src/sass/config/_movement.scss
+++ b/src/sass/config/_movement.scss
@@ -1,7 +1,8 @@
 $base-transition-duration: 500ms;
 $bounce-easing: cubic-bezier(1,0,.5,1);
 $slide-easing: cubic-bezier(.71,.21,.35,1);
-$base-easing: $slide-easing;
+$cubic-easing: cubic-bezier(0.65, 0, 0.35, 1);
+$base-easing: $cubic-easing;
 $base-transition: $base-transition-duration $base-easing;
 
 $hover-transition-duration: 100ms;
