--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,6 +44,7 @@
   --outer-padding: calc(2 * var(--base-spacer));
   --sidebar-width: #{px(600)};
   --min-element-height: 30px;
+  --page-shift: #{px(500)};
   --border: 1px solid rgba(255, 255, 255, 0.1);
   --horizontal-offset: #{px(50)};
   --border-radius: 0; 
