--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -4,11 +4,10 @@ $colors: (
   'blue': #38a0f0,
   'storm': #889fa7,
   'white': #ffffff,
-  'black': rgb(10, 5, 8),
+  'black': rgb(26, 24, 25),
   'yellow': rgb(255, 172, 30),
   'teal': #73d2deff,
-  'green': #4ce0d2,
   'purple': #bba2f3,
-  'spotify': #1db954,
+  'green': #37da3a,
   'gray': #54494b
 );
