--- a/src/styles/imports.scss
+++ b/src/styles/imports.scss
@@ -3,6 +3,7 @@
 @forward './mixins/_button.scss';
 @forward './mixins/_cascade.scss';
 @forward './mixins/_center.scss';
+@forward './mixins/_dark-mode.scss';
 @forward './mixins/_flex.scss';
 @forward './mixins/_form-control.scss';
 @forward './mixins/_grid.scss';
