--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -160,6 +160,11 @@ body,
 body {
   font-family: Inconsolata, sans-serif;
   font-weight: 300;
+  color: var(--gray);
+
+  @include dark-mode {
+    color: var(--white);
+  }
 }
 
 @keyframes nav-bobble {
